1999-04-25  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* config.swarm.in (JAVA_CLASSES_INSTALLED_AS): New substitution.

1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (INCLUDES): Add include for src/gui directory,
	for gui.h header file (needed by space library).

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVACMD, JAVAENV): New substitutions.

1999-04-20  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (SWARMBUILDLDFLAGS): Remove extra .libs
	subdirectory references, libtool now appends these internally.

1999-04-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVA): Single quote substitution to avoid
	expansion of LD_LIBRARY_PATH.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVACLASSES, JAVALIBS, JAVA): Substitute.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (swarm_datadir, jdkdir): Substitute.

1999-03-16  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_OBJCLIBS): Don't substitute (use local
	-lobjc).

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.tests.in (SWARMBUILDLDFLAGS): Use -R instead of -rpath.

	* Makefile.common.in (ffilibdir): Use instead of ffidir.

	* config.swarm.in (ffilibdir): Likewise.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (OBJCLIBS): Don't substitute (use local -lobjc).

1999-02-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (generate-expanded-methodinfo-list[s]): Add uniquify 
	flag.
	(load-and-process-modules): Add uniquify method-lists key.

1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (generate-expanded-methodinfo-list): Use method
	string signatures to key of method-hash-table instead of 
	method objects.  Replace methods only if level is higher.

1999-02-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
