@@ -3,8 +3,9 @@ include $(top_builddir)/etc/Makefile.common
 INCLUDES = $(foreach module,. $(SWARMMODULES),-I$(top_srcdir)/src/$(module) -I$(top_builddir)/src/$(module)) -I$(top_srcdir)/src/gui/
 
 builddir = $(shell cd ../../src; pwd)
-
-SWARMBUILDLDFLAGS = $(foreach module,$(SWARMMODULES),-L$(builddir)/$(module) -R $(builddir)/$(module))
+libobjcdir = $(shell cd ../../libobjc; pwd)
+ 
+SWARMBUILDLDFLAGS = $(foreach module,$(SWARMMODULES),-L$(builddir)/$(module) -R $(builddir)/$(module)) -L$(libobjcdir) -R $(libobjcdir)
 
 LDFLAGS = $(SWARMBUILDLDFLAGS) $(SUPPORTLDFLAGS)
 
